--- a/mobile/src/main/res/layout/subscription.xml
+++ b/mobile/src/main/res/layout/subscription.xml
@@ -30,7 +30,7 @@
 
 
             <TextView
-                android:id="@+id/my_gym_subscription"
+                android:id="@+id/my_gym_registration"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="3sp"
@@ -39,18 +39,22 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:hint="@string/my_gym_registration_hint"
-                android:layout_weight="1.1"/>
+                android:layout_weight="1.1"
+                android:clickable="true"
+                android:focusable="true"/>
 
             <ImageButton
-                android:id="@+id/date_picker"
+                android:id="@+id/my_gym_registration_date_picker"
                 android:layout_width="0sp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textSize="18sp"
                 android:src="@drawable/ic_date_range_black_24dp"
                 android:background="@android:color/transparent"
                 android:layout_weight="0.2"
                 android:padding="0sp"
-                android:layout_margin="0sp" />
+                android:layout_margin="0sp"
+                android:clickable="true"
+                android:focusable="true"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -78,7 +82,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/my_gym_registration"
+                android:id="@+id/my_gym_subscription"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="3sp"
