--- a/mobile/src/main/res/layout/progress_card_layout.xml
+++ b/mobile/src/main/res/layout/progress_card_layout.xml
@@ -10,28 +10,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10sp"
+        android:layout_height="wrap_content"
         android:weightSum="2">
 
 
-        <ImageView
-            android:id="@+id/progress_card_item_status_image"
+        <LinearLayout
+            android:id="@+id/progress_card_item_status_image_wrapper"
             android:layout_width="0sp"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/ic_date_range_black_24dp"
+            android:layout_height="match_parent"
             android:layout_weight="0.5"
-            />
+            android:gravity="center_vertical|center_horizontal">
+
+            <ImageView
+                android:id="@+id/progress_card_item_status_image"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
+                android:src="@drawable/logo" />
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/progress_card_item_date"
             android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="14/4/2018"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1.5"
+            android:gravity="center"
+            android:text="14/4/2018"
             android:textSize="24sp"
-            android:textStyle="bold"/>
+            android:fontFamily="@font/roboto"
+            android:padding="12sp"/>
 
     </LinearLayout>
 
