--- a/mobile/src/main/res/layout/activity_add_progress.xml
+++ b/mobile/src/main/res/layout/activity_add_progress.xml
@@ -22,4 +22,33 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <ScrollView
+        android:id="@+id/body_info"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/today"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5sp"
+                android:background="@android:color/darker_gray"
+                android:fontFamily="@font/roboto"
+                android:padding="10sp"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+            <include layout="@layout/add_progress_bottom" />
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
