--- a/mobile/src/main/res/layout/add_progress_bottom.xml
+++ b/mobile/src/main/res/layout/add_progress_bottom.xml
@@ -54,7 +54,7 @@
             <TextView
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.6"
+                android:layout_weight="1.5"
                 android:fontFamily="@font/roboto"
                 android:gravity="center_vertical"
                 android:text="@string/height"
@@ -65,7 +65,15 @@
                 android:id="@+id/height"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.4"
+                android:layout_weight="0.3"
+                android:gravity="right" />
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:text="@string/centimeters"
+                android:textSize="18sp"
                 android:gravity="right" />
 
         </LinearLayout>
