--- a/mobile/src/main/res/layout/add_progress_bottom.xml
+++ b/mobile/src/main/res/layout/add_progress_bottom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -246,5 +247,23 @@
             android:text="@string/percentage"
             android:textSize="18sp"
             android:gravity="right" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5sp"
+        android:layout_marginStart="5sp"
+        android:layout_marginTop="5sp"
+        android:padding="10sp"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/add_progress_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Προσθήκη"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 </LinearLayout>
