--- a/mobile/src/main/res/layout-v21/home_grid_menu.xml
+++ b/mobile/src/main/res/layout-v21/home_grid_menu.xml
@@ -136,7 +136,8 @@
             android:text="@string/myMusic"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_play_circle_outline_white_18dp" />
+            android:drawableTop="@drawable/ic_play_circle_outline_white_18dp"
+            android:enabled="false"/>
 
     </android.support.v7.widget.CardView>
 
@@ -161,7 +162,8 @@
             android:text="@string/myFriends"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:drawableTop="@drawable/ic_people_white_18dp" />
+            android:drawableTop="@drawable/ic_people_white_18dp"
+            android:enabled="false"/>
 
     </android.support.v7.widget.CardView>
 
