--- a/mobile/src/main/res/layout/home_grid_menu.xml
+++ b/mobile/src/main/res/layout/home_grid_menu.xml
@@ -135,7 +135,8 @@ app:rowCount="3">
         android:text="@string/myMusic"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:drawableTop="@drawable/ic_play_circle_outline_white_18dp" />
+        android:drawableTop="@drawable/ic_play_circle_outline_white_18dp"
+        android:enabled="false"/>
 
 </android.support.v7.widget.CardView>
 
@@ -160,7 +161,8 @@ app:rowCount="3">
         android:text="@string/myFriends"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:drawableTop="@drawable/ic_people_white_18dp" />
+        android:drawableTop="@drawable/ic_people_white_18dp"
+        android:enabled="false"/>
 
 </android.support.v7.widget.CardView>
 
