--- a/mobile/src/main/res/layout-v21/home_grid_menu.xml
+++ b/mobile/src/main/res/layout-v21/home_grid_menu.xml
@@ -23,7 +23,7 @@
         app:layout_columnWeight="1">
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/myProgram_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="0dp"
@@ -33,7 +33,8 @@
                 android:text="@string/mySchedule"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                android:drawableTop="@drawable/ic_assignment_white_18dp" />
+                android:drawableTop="@drawable/ic_assignment_white_18dp"
+                android:onClick="navigate" />
 
     </android.support.v7.widget.CardView>
 
