--- a/mobile/src/main/res/layout/activity_my_program.xml
+++ b/mobile/src/main/res/layout/activity_my_program.xml
@@ -20,5 +20,25 @@
         app:title="@string/myProgram">
     </android.support.v7.widget.Toolbar>
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/my_program_recycler_view"
+        android:layout_marginTop="5sp">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_prograrm_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_add_white_36dp"
+        app:backgroundTint="@android:color/holo_green_light"
+        app:fabSize="normal" />
 
 </android.support.constraint.ConstraintLayout>
