--- a/mobile/src/main/res/layout/program_card_layout.xml
+++ b/mobile/src/main/res/layout/program_card_layout.xml
@@ -8,41 +8,33 @@
     android:layout_marginRight="10sp"
     android:layout_marginBottom="5sp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="2">
-
-
         <LinearLayout
-            android:id="@+id/program_card_item_status_image_wrapper"
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:gravity="center_vertical|center_horizontal">
-
-            <ImageView
-                android:id="@+id/program_card_item_status_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true"
-                android:src="@drawable/logo" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/program_card_item_date"
-            android:layout_width="0sp"
+            android:id="@+id/program_card_item_info_wrapper"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1.5"
-            android:gravity="center"
-            android:text="14/4/2018"
-            android:textSize="24sp"
-            android:fontFamily="@font/roboto"
-            android:padding="12sp"/>
+            android:orientation="vertical">
 
-    </LinearLayout>
-
+            <TextView
+                android:id="@+id/program_type"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1.5"
+                android:gravity="center"
+                android:text="current"
+                android:textSize="48sp"
+                android:fontFamily="@font/roboto"
+                android:padding="4sp"/>
+            <TextView
+                android:id="@+id/program_created_date"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1.5"
+                android:gravity="center"
+                android:text="14/4/2018"
+                android:textSize="24sp"
+                android:fontFamily="@font/roboto"
+                android:padding="2sp"/>
+        </LinearLayout>
 </android.support.v7.widget.CardView>
