--- a/mobile/src/main/res/layout/activity_my_program_container.xml
+++ b/mobile/src/main/res/layout/activity_my_program_container.xml
@@ -37,4 +37,13 @@
         app:layout_constraintTop_toBottomOf="@+id/tabs"
         app:layout_constraintBottom_toBottomOf="parent">
     </android.support.v4.view.ViewPager>
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        app:layout_constraintTop_toBottomOf="@+id/tabs"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
