--- a/mobile/src/main/res/layout/fragment_muscle_group.xml
+++ b/mobile/src/main/res/layout/fragment_muscle_group.xml
@@ -1,15 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Fragments.MuscleGroupFragment"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:clickable="true"
+    android:focusable="true"
+    android:layout_marginStart="10sp"
+    android:layout_marginEnd="10sp"
+    android:layout_marginBottom="10sp">
+
+    <TextView
+        android:id="@+id/muscle_group_title"
+        android:text="MUSCLE GROUP"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:padding="5sp"
+        android:textSize="28sp"
+        android:fontFamily="@font/roboto_thin"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="3">
+
+        <Spinner
+            android:id="@+id/exercise_spinner"
+            android:layout_width="0sp"
+            android:layout_height="50sp"
+            android:layout_weight="2"
+            android:layout_marginEnd="5sp"
+            android:gravity="center_vertical"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
+
+            <Button
+                android:id="@+id/close_fragment"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorWhite"
+                android:text="Add"/>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/muscle_group_added_title"
+        android:text="Added Exercises"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:padding="5sp"
+        android:textSize="24sp"
+        android:fontFamily="@font/roboto_thin"/>
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/added_exercises_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:id="@+id/muscle_group_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
+    </android.support.v4.widget.NestedScrollView>
 
     <Button
-        android:id="@+id/close_fragment"
-        android:layout_width="wrap_content"
+        android:id="@+id/store_exercises_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorWhite" />
-
-</FrameLayout>
+        android:textColor="@color/colorWhite"
+        android:layout_marginTop="5sp"
+        android:text="Store exercises" />
+</LinearLayout>
