--- a/mobile/src/main/res/layout/fragment_program_creation.xml
+++ b/mobile/src/main/res/layout/fragment_program_creation.xml
@@ -161,4 +161,21 @@
                 android:textSize="18sp" />
         </android.support.v7.widget.CardView>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100sp"
+        android:weightSum="2"
+        android:padding="10sp"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/store_program_button"
+            android:layout_width="0sp"
+            android:layout_height="70sp"
+            android:layout_weight="1"
+            android:background="@color/colorWhite"
+            android:textColor="@color/colorButtonFirst"
+            android:textSize="18sp"
+            android:text="ΑΠΟΘΗΚΕΥΣΗ"/>
+    </LinearLayout>
 </LinearLayout>
